@@ -996,14 +996,14 @@ addFormants = function(sound,
       if (movingFormants) {
         z = z * spectralEnvelope
       } else {
-        z = apply (z, 2, function(x)
+        z = apply(z, 2, function(x)
           x * spectralEnvelope)
       }
     } else if (action == 'remove') {
       if (movingFormants) {
         z = z / spectralEnvelope
       } else {
-        z = apply (z, 2, function(x)
+        z = apply(z, 2, function(x)
           x / spectralEnvelope)
       }
     }
