@@ -8,8 +8,8 @@ generateHarmonics(pitch, glottisAnchors = 0, attackLen = 50,
   nonlinBalance = 0, nonlinDep = 50, nonlinRandomWalk = NULL,
   jitterDep = 0, jitterLen = 1, vibratoFreq = 5, vibratoDep = 0,
   shimmerDep = 0, shimmerLen = 1, creakyBreathy = 0, rolloff = -9,
-  rolloffOct = -3, rolloffKHz = -3, rolloffParab = 0,
-  rolloffParabHarm = 3, rolloff_perAmpl = 3, rolloffExact = NULL,
+  rolloffOct = 0, rolloffKHz = 0, rolloffParab = 0,
+  rolloffParabHarm = 3, rolloff_perAmpl = 0, rolloffExact = NULL,
   temperature = 0.025, pitchDriftDep = 0.5, pitchDriftFreq = 0.125,
   amplDriftDep = 5, subDriftDep = 4, rolloffDriftDep = 3,
   randomWalk_trendStrength = 0.5, shortestEpoch = 300, subFreq = 100,
