@@ -616,7 +616,7 @@ s2 = soundgen(jitterLen = 1, jitterDep = 1,   # harsh voice
               pitch =  c(150, 170), play = playback)
 ```
 
-To get jitter + shimmer + subharmonics, set temperature to 0 (nonlinear effects are then applied to the entire sound) or use nonlinBalance close to 100% with temperature > 0 (effectively the same, but preserving stochastic behavior of other parameters). For example, barks of a small, annoying dog can be roughly approximated with this minimal code (ignoring respiration to keep things simple):
+To get jitter + shimmer + subharmonics, set temperature to 0 (nonlinear effects are then applied to the entire sound, but note that extra formants are then not added) or - the recommended solution - use nonlinBalance close to 100% with temperature > 0, thus preserving stochastic behavior of other parameters. For example, barks of a small, annoying dog can be roughly approximated with this minimal code (ignoring respiration to keep things simple):
 ```{r}
 s = soundgen(repeatBout = 2, sylLen = 140, pauseLen = 100, 
              vocalTract = 8, formants = NULL, rolloff = 0,
@@ -625,7 +625,22 @@ s = soundgen(repeatBout = 2, sylLen = 140, pauseLen = 100,
 ```
 
 ### Chaos
-There is no way to synthesize true deterministic chaos with residual harmonic structure in soundgen. However, there are several roundabout ways to achieve a comparable effect. As already mentioned, strong jitter and shimmer create harsh sounds that are perceptually similar to deterministic chaos, especially for higher f0 values. Another method is to encode very rapid pitch jumps between harmonically related values, like this:
+There is no way to synthesize true deterministic chaos with residual harmonic structure in soundgen. However, there are several roundabout ways to achieve a comparable effect. As already mentioned, strong jitter and shimmer create harsh sounds that are perceptually similar to deterministic chaos, especially for higher f0 values:
+```{r fig.width = 7, fig.height = 7}
+s = soundgen(sylLen = 1200, 
+             pitch = list(
+               time = c(0, 110, 111, 180, 350, 940, 941, 1100, 1200),
+               value = c(700, 1150, 1550, 2000, 2240, 1940, 1180, 900, 500)),
+             temperature = 0.05, tempEffects = list(pitchAnchors = 0),
+             nonlinBalance = 100, subDep = 0, 
+             jitterDep = data.frame(time = c(0, 200, 201, 900, 901, 1200),
+                                    value = c(0, 0,  1.7, 1.2, 0,   0)),
+             formants = c(900, 1300, 3300, 4300),
+             attackLen = c(10, 200),
+             samplingRate = 22000, play = playback, plot = TRUE, osc = TRUE)
+```
+
+Another method is to encode very rapid pitch jumps between harmonically related values, like this:
 
 ```{r fig.width = 7, fig.height = 7}
 s = soundgen(sylLen = 1200, 
@@ -748,16 +763,18 @@ The perceptual quality of turbulent noise depends on its spectral composition, w
 1.  Breathing. This noise type is generated as white noise with spectral rolloff given by `rolloffNoise` ("Noise rolloff, dB/octave" in the app) above a certain cutoff value (`flatSpectrum`, the default is currently 1200 Hz). It is added to the voiced component *before* formant filtering. As a result, it follows exactly the same formant structure as the voiced component, and you cannot modify its spectrum beyond the basic rolloff setting. This is useful for adding noise that originates deep in the throat, close to the vocal cords. To generate breathing, specify `noise`, but leave `formantsNoise` blank (NA, which is its default value). Soundgen then assumes that the unvoiced component should have the same formant structure as the voiced component.
 
 ```{r fig.width = 5, fig.height = 5}
-s = soundgen(noise = data.frame(time = c(0, 800), value = c(-40, 0)),
+s = soundgen(sylLen = 500, 
+             noise = data.frame(time = c(0, 800), value = c(-40, 0)),
              formantsNoise = NA,  # breathing - same formants as for voiced
-             sylLen = 500, play = playback, plot = TRUE)
+             play = playback, plot = TRUE)
 # observe that the voiced and unvoiced components have exactly the same formants
 ```
 
 2.  Any other noise type is added to the voiced component *after* formant filtering, and therefore this noise can be filtered independently of the voiced component. To generate such noise, you can use one of the available presets in the app (for now, only a few human consonants) or specify the formants for the unvoiced component (`formantsNoise`) manually in exactly the same format as for the voiced component (`formants`). 
 
 ```{r fig.width = 5, fig.height = 5}
-s = soundgen(noise = data.frame(time = c(0, 800), value = c(-60, -30)),
+s = soundgen(sylLen = 500, 
+             noise = data.frame(time = c(0, 800), value = c(-60, -30)),
              # specify noise filter ≠ voiced filter to get ~[s]
              formantsNoise = list(
                f1 = data.frame(freq = 6000,
@@ -765,7 +782,7 @@ s = soundgen(noise = data.frame(time = c(0, 800), value = c(-60, -30)),
                                width = 1000)
              ), 
              rolloffNoise = 0,
-             sylLen = 500, play = playback, plot = TRUE)
+             play = playback, plot = TRUE)
 # observe that the voiced and unvoiced components have different formants
 ```
 
@@ -907,12 +924,11 @@ If you want the two sounds to overlap, you can use `addVectors()`, which simply 
 sound1 = soundgen(sylLen = 700, pitch = 250:180, 
                   formants = 'aaao', 
                   addSilence = 100, play = playback)
-# suppress warnings related to very high pitch values
-sound2 = suppressWarnings(soundgen(nSyl = 2, sylLen = 150, 
-                                   pitch = 4300:2200, attackLen = 10,
-                                   formants = NA, temperature = .001, 
-                                   pitchCeiling = 8000, pitchSamplingRate = 8000,  # >pitch
-                                   addSilence = 0, play = playback))
+sound2 = soundgen(nSyl = 2, sylLen = 150, 
+                  pitch = 4300:2200, attackLen = 10,
+                  formants = NA, temperature = .001, 
+                  pitchCeiling = 8000, pitchSamplingRate = 8000,  # >pitch
+                  addSilence = 0, play = playback)
 
 insertionTime = .1 + .15  # silence + 150 ms
 samplingRate = 16000
@@ -958,7 +974,7 @@ m = suppressMessages(morph(formula1 = list(repeatBout = 2),
 # playme(m$sounds[[3]])
 ```
 
-*TIP Morphing a completely unvoiced to a voiced sound is currently not implemented. Add a very quiet voiced component to avoid glitches. Also try to make formants and formantsNoise compatible in both formulas: either leave both NULL or specify both in the same way (e.g. with or without explicitly defined amplitudes and bandwidths)*
+*TIP Morphing a completely unvoiced into a voiced sound is currently not implemented. Add a very quiet voiced component to avoid glitches. Also try to make formants and formantsNoise compatible in both formulas: either leave both NULL or specify both in the same way (e.g. with or without explicitly defined amplitudes and bandwidths)*
 
 
 # Matching an existing sound
